--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.0",
