--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
