--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,13 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "jotai": "^2.5.1",
     "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.2"
