--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.6.2",
+    "dog-breeds": "^1.0.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "jotai": "^2.5.1",
