--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
